@@ -363,9 +363,10 @@ HOA: v1
 States: 1
 Start: 0
 AP: 0
-acc-name: none
-Acceptance: 0 f
+acc-name: all
+Acceptance: 0 t
 properties: trans-labels explicit-labels state-acc deterministic
+properties: stutter-invariant weak
 --BODY--
 State: 0
 --END--
